# concurrent-log-engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  input_file.txt
include/: log_analyzer.hpp  log_reader.hpp  log_writer.hpp  thread_safe_queue.hpp
src/: log_analyzer.cpp  log_reader.cpp  log_writer.cpp  main.cpp  thread_safe_queue.cpp
